finish pandas-etl

--- a/dataScience/pandas_etl/vendas_online.ipynb
+++ b/dataScience/pandas_etl/vendas_online.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 1,
    "id": "1718c0fb",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 2,
    "id": "7613c769",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "4  [R$ 314,24, R$ 311,15, R$ 899,16, R$ 885,24]  "
       ]
      },
-     "execution_count": 159,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 3,
    "id": "afe74987",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 4,
    "id": "744a6cda",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        "19    10/06/2022   Thiago fritzz 883       R$ 885,24"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 5,
    "id": "439fcd0d",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 6,
    "id": "d4faca0d",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "19    10/06/2022   Thiago fritzz 883          885.24"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 7,
    "id": "bd41236f",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 8,
    "id": "b48196ea",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 9,
    "id": "0a4caa01",
    "metadata": {},
    "outputs": [
@@ -785,7 +785,7 @@
        "19    2022-06-10   Thiago fritzz 883           885.24"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 10,
    "id": "71311e74",
    "metadata": {},
    "outputs": [],
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 11,
    "id": "563e43a6",
    "metadata": {},
    "outputs": [],
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 12,
    "id": "9b7cf9ff",
    "metadata": {},
    "outputs": [
@@ -851,7 +851,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 13,
    "id": "180a228e",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1062,7 @@
        "19  883   thiago fritzz     2022-06-10           885.24"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,6 +1078,363 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c11d077",
+   "metadata": {},
+   "source": [
+    "#### Etapa 4\n",
+    "\n",
+    "### Projeto desafio 1: vendas online\n",
+    "Nas etapas anteriores, já trabalhamos com vários tipos de dados, agora podemos trabalhar com os dados de tempo.\n",
+    "\n",
+    "Na coluna Data de venda, temos datas em formato 'dia/mês/ano' (dd/mm/AAAA). Transforme esses dados para o tipo datetime e busque uma forma de visualização de subconjunto que possa contribuir no objetivo do contexto que os dados estão inseridos.\n",
+    "\n",
+    "Se você não lembra o problema do projeto desafio 1, vou deixar abaixo o texto da situação para facilitar o encontro da informação:\n",
+    "\n",
+    "O objetivo desse projeto é realizar uma análise dos resultados de um evento com os clientes de uma empresa de vendas online. Foi coletado um conjunto de dados que contém os clientes que mais gastaram com produtos dentro de 5 dias de vendas, que é o período de duração do evento. Essa análise vai identificar o cliente com a maior compra na semana, que irá receber um prêmio da loja, e posteriormente, ela pode ajudar a empresa a criar novas estratégias para atrair mais clientes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1a00af47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                          int64\n",
+       "cliente                    object\n",
+       "Data de venda      datetime64[ns]\n",
+       "Valor da compra           float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "32af03b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>cliente</th>\n",
+       "      <th>Data de venda</th>\n",
+       "      <th>Valor da compra</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>321</td>\n",
+       "      <td>ana  lucia</td>\n",
+       "      <td>2022-06-06</td>\n",
+       "      <td>836.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>210</td>\n",
+       "      <td>diego armandiu</td>\n",
+       "      <td>2022-06-06</td>\n",
+       "      <td>573.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>210</td>\n",
+       "      <td>diego armandiu</td>\n",
+       "      <td>2022-06-06</td>\n",
+       "      <td>392.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>210</td>\n",
+       "      <td>diego armandiu</td>\n",
+       "      <td>2022-06-06</td>\n",
+       "      <td>512.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>738</td>\n",
+       "      <td>isabely joanes</td>\n",
+       "      <td>2022-06-07</td>\n",
+       "      <td>825.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>738</td>\n",
+       "      <td>isabely joanes</td>\n",
+       "      <td>2022-06-07</td>\n",
+       "      <td>168.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>738</td>\n",
+       "      <td>isabely joanes</td>\n",
+       "      <td>2022-06-07</td>\n",
+       "      <td>339.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>738</td>\n",
+       "      <td>isabely joanes</td>\n",
+       "      <td>2022-06-07</td>\n",
+       "      <td>314.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>738</td>\n",
+       "      <td>isabely joanes</td>\n",
+       "      <td>2022-06-08</td>\n",
+       "      <td>682.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>671</td>\n",
+       "      <td>joão gabriel</td>\n",
+       "      <td>2022-06-08</td>\n",
+       "      <td>386.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>914</td>\n",
+       "      <td>julya meireles</td>\n",
+       "      <td>2022-06-08</td>\n",
+       "      <td>622.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>914</td>\n",
+       "      <td>julya meireles</td>\n",
+       "      <td>2022-06-08</td>\n",
+       "      <td>630.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>914</td>\n",
+       "      <td>julya meireles</td>\n",
+       "      <td>2022-06-09</td>\n",
+       "      <td>390.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>444</td>\n",
+       "      <td>maria julia</td>\n",
+       "      <td>2022-06-09</td>\n",
+       "      <td>759.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>444</td>\n",
+       "      <td>maria julia</td>\n",
+       "      <td>2022-06-09</td>\n",
+       "      <td>334.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>444</td>\n",
+       "      <td>maria julia</td>\n",
+       "      <td>2022-06-09</td>\n",
+       "      <td>678.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>444</td>\n",
+       "      <td>maria julia</td>\n",
+       "      <td>2022-06-10</td>\n",
+       "      <td>314.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>812</td>\n",
+       "      <td>pedro pasco</td>\n",
+       "      <td>2022-06-10</td>\n",
+       "      <td>311.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>481</td>\n",
+       "      <td>paulo castro</td>\n",
+       "      <td>2022-06-10</td>\n",
+       "      <td>899.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>883</td>\n",
+       "      <td>thiago fritzz</td>\n",
+       "      <td>2022-06-10</td>\n",
+       "      <td>885.24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id          cliente Data de venda  Valor da compra\n",
+       "0   321      ana  lucia     2022-06-06           836.50\n",
+       "1   210  diego armandiu     2022-06-06           573.33\n",
+       "2   210  diego armandiu     2022-06-06           392.80\n",
+       "3   210  diego armandiu     2022-06-06           512.34\n",
+       "4   738  isabely joanes     2022-06-07           825.31\n",
+       "5   738  isabely joanes     2022-06-07           168.07\n",
+       "6   738  isabely joanes     2022-06-07           339.18\n",
+       "7   738  isabely joanes     2022-06-07           314.69\n",
+       "8   738  isabely joanes     2022-06-08           682.05\n",
+       "9   671    joão gabriel     2022-06-08           386.34\n",
+       "10  914  julya meireles     2022-06-08           622.65\n",
+       "11  914  julya meireles     2022-06-08           630.79\n",
+       "12  914  julya meireles     2022-06-09           390.30\n",
+       "13  444     maria julia     2022-06-09           759.16\n",
+       "14  444     maria julia     2022-06-09           334.47\n",
+       "15  444     maria julia     2022-06-09           678.78\n",
+       "16  444     maria julia     2022-06-10           314.24\n",
+       "17  812     pedro pasco     2022-06-10           311.15\n",
+       "18  481    paulo castro     2022-06-10           899.16\n",
+       "19  883   thiago fritzz     2022-06-10           885.24"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "cfbc423b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cliente</th>\n",
+       "      <th>Valor da compra</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>isabely joanes</td>\n",
+       "      <td>2329.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>maria julia</td>\n",
+       "      <td>2086.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>julya meireles</td>\n",
+       "      <td>1643.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>diego armandiu</td>\n",
+       "      <td>1478.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>paulo castro</td>\n",
+       "      <td>899.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>thiago fritzz</td>\n",
+       "      <td>885.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ana  lucia</td>\n",
+       "      <td>836.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>joão gabriel</td>\n",
+       "      <td>386.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>pedro pasco</td>\n",
+       "      <td>311.15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           cliente  Valor da compra\n",
+       "0  isabely joanes           2329.30\n",
+       "1     maria julia           2086.65\n",
+       "2  julya meireles           1643.74\n",
+       "3  diego armandiu           1478.47\n",
+       "4    paulo castro            899.16\n",
+       "5   thiago fritzz            885.24\n",
+       "6      ana  lucia            836.50\n",
+       "7    joão gabriel            386.34\n",
+       "8     pedro pasco            311.15"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rank_melhor_cliente = dados.groupby('cliente')['Valor da compra'].sum().sort_values(ascending=False).reset_index()\n",
+    "rank_melhor_cliente"
+   ]
   }
  ],
  "metadata": {
@@ -1096,7 +1453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
