--- a/estatistica_ML/Projeto_Inicial_Estatística_com_Python_frequencias_e_medidas.ipynb
+++ b/estatistica_ML/Projeto_Inicial_Estatística_com_Python_frequencias_e_medidas.ipynb
@@ -73,12 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "id": "O6BY_gF0ihGR"
    },
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd"
    ]
   },
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "id": "FSAhtmGJijsk"
    },
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "id": "x3UnzGIOilr0"
    },
@@ -127,7 +128,7 @@
        "(200000, 10)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "id": "O0nK_TMgio0g"
    },
@@ -161,7 +162,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "id": "8mnPTNAzir4M"
    },
@@ -233,7 +234,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +294,7 @@
        "       'Brinquedos', 'Esporte e Lazer'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "id": "j4xzQ4h-iuj-"
    },
@@ -438,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "id": "BvU1nTZzjhZF"
    },
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "id": "QN7LFlcIjhSJ"
    },
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "id": "--a0wfacjhNr"
    },
@@ -686,39 +687,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "gk_La5MGjcS9"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  1,  8,  5,  3,  7,  6,  4, 10,  9])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.quantidade.unique()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "_i1Q4Oaojb_3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menor valor: 1\n",
+      "Maior valor: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "smaller_quantity = df.quantidade.min()\n",
+    "bigger_quantity = df.quantidade.max()\n",
+    "print(f'Menor valor: {smaller_quantity}\\nMaior valor: {bigger_quantity}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "ZApQiQUujb7D"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           193.60\n",
+       "1           247.68\n",
+       "2          1254.92\n",
+       "3         16200.56\n",
+       "4           496.20\n",
+       "            ...   \n",
+       "199995    13183.80\n",
+       "199996     1666.33\n",
+       "199997     1193.03\n",
+       "199998      354.41\n",
+       "199999     1272.60\n",
+       "Name: total_compra, Length: 200000, dtype: float64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.total_compra"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "I-zXWVt0jb2Q"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Menor venda: 5.05\n",
+      "Maior venda: 20744.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "smallest_sale = df.total_compra.min()\n",
+    "biggest_sale = df.total_compra.max()\n",
+    "print(f'Menor venda: {smallest_sale}\\nMaior venda: {biggest_sale}')"
+   ]
   },
   {
    "cell_type": "code",
@@ -3047,7 +3111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
