--- a/estatistica_ML/Projeto_Inicial_Estatística_com_Python_frequencias_e_medidas.ipynb
+++ b/estatistica_ML/Projeto_Inicial_Estatística_com_Python_frequencias_e_medidas.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "id": "O6BY_gF0ihGR"
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {
     "id": "FSAhtmGJijsk"
    },
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "id": "x3UnzGIOilr0"
    },
@@ -128,7 +128,7 @@
        "(200000, 10)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {
     "id": "O0nK_TMgio0g"
    },
@@ -162,7 +162,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "id": "8mnPTNAzir4M"
    },
@@ -234,7 +234,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "       'Brinquedos', 'Esporte e Lazer'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {
     "id": "j4xzQ4h-iuj-"
    },
@@ -439,7 +439,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id_compra', 'sexo_biologico', 'idade_cliente', 'regiao_cliente',\n",
+       "       'categoria_produto', 'preco_unitario', 'quantidade', 'total_compra',\n",
+       "       'tempo_entrega', 'avaliacao'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "id": "BvU1nTZzjhZF"
    },
@@ -450,7 +473,7 @@
        "array([1, 4, 5, 3, 2])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +518,7 @@
        "Categories (5, int64): [1 < 2 < 3 < 4 < 5]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {
     "id": "QN7LFlcIjhSJ"
    },
@@ -529,7 +552,7 @@
        "Categories (5, object): ['Péssimo' < 'Ruim' < 'Regular' < 'Bom' < 'Ótimo']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "id": "--a0wfacjhNr"
    },
@@ -611,7 +634,7 @@
        "14          2                Ruim"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {
     "id": "M9Bm5T5PkcXh"
    },
@@ -691,7 +714,7 @@
        "4                Ruim          28239"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {
     "id": "F6dzuzZwlPfE"
    },
@@ -719,7 +742,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {
     "id": "gk_La5MGjcS9"
    },
@@ -788,7 +811,7 @@
        "array([ 2,  1,  8,  5,  3,  7,  6,  4, 10,  9])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {
     "id": "_i1Q4Oaojb_3"
    },
@@ -821,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {
     "id": "ZApQiQUujb7D"
    },
@@ -843,7 +866,7 @@
        "Name: total_compra, Length: 200000, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {
     "id": "I-zXWVt0jb2Q"
    },
@@ -1011,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {
     "id": "4Dteb-mWjYjK"
    },
@@ -1022,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {
     "id": "08cp-Ig_jYfD"
    },
@@ -1091,7 +1114,7 @@
        "4             Péssimo          32423"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {
     "id": "8qTzyU0LjW9H"
    },
@@ -1128,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "metadata": {
     "id": "ScDP5E1sjW4W"
    },
@@ -1203,7 +1226,7 @@
        "0             Péssimo          32423           16.2"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "metadata": {
     "id": "6JfIP9YcCKQA"
    },
@@ -1230,7 +1253,7 @@
        "Name: freq_absoluta, dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {
     "id": "2RSwUXWajVPd"
    },
@@ -1329,7 +1352,7 @@
        "0   Péssimo       32423             16.2"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1481,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1557,7 +1580,7 @@
        "3          Ônibus  11  0.23  48      1.00"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1695,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {
     "id": "Mh-WWywQjQ_O"
    },
@@ -1770,7 +1793,7 @@
        "0   Péssimo       32423             16.2"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 44,
    "metadata": {
     "id": "qa3ln_rxwvGg"
    },
@@ -1798,7 +1821,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +1844,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1832,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1926,7 +1949,7 @@
        "Ótimo                       11124     17343   5490    20656  11463"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2033,7 +2056,7 @@
        "Ótimo                        35.2      35.0   31.1     32.0  31.3"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 48,
    "metadata": {
     "id": "hTYX1DmhjNP4"
    },
@@ -2156,7 +2179,7 @@
        "Ótimo                        35.2      35.0   31.1     32.0  31.3"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2178,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "metadata": {
     "id": "bfzcuAVWjNsH"
    },
@@ -2247,7 +2270,7 @@
        "4            Sul  50.1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2269,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 50,
    "metadata": {
     "id": "pWoIWukojPSc"
    },
@@ -2338,7 +2361,7 @@
        "4            Sul  34.3"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2392,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2459,7 +2482,7 @@
        "4           Funk  Nordeste"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,7 +2516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2587,7 +2610,7 @@
        "Sertanejo                 14        12     22       25   23"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2611,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2705,7 +2728,7 @@
        "Sertanejo               13.5      12.2   25.6     20.8  25.0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2725,7 +2748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2819,7 +2842,7 @@
        "Sertanejo               14.6      12.5   22.9     26.0  24.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2839,7 +2862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2933,7 +2956,7 @@
        "Sertanejo                2.8       2.4    4.4      5.0  4.6"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3015,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 56,
    "metadata": {
     "id": "V_XKeYyljncX"
    },
@@ -3084,7 +3107,7 @@
        "Masculino            2025.24   2005.31  1830.54  1881.08  1871.38"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3903,7 +3926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "id": "olLlV3WzkOWG"
    },
