--- a/estatistica_ML/saber_Mais_3_distribuicao_frequencia_dados.ipynb
+++ b/estatistica_ML/saber_Mais_3_distribuicao_frequencia_dados.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "dc699db5",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "[11090 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,12 @@
    "source": [
     "# Definindo as classes salariais com base nas faixas\n",
     "labels = ['E', 'D', 'C', 'B', 'A']\n",
-    "colaboradores['faixa_salarial'] = pd.cut(colaboradores['remuneracao'], bins=classes, labels=labels, right=True, include_lowest=True)\n",
+    "colaboradores['faixa_salarial'] = pd.cut(colaboradores['remuneracao'], # Coluna utilizada para classificar\n",
+    "                                         bins=classes, #Define os limites dos intervalos (\"Classes\")\n",
+    "                                         labels=labels, # A etiqueta que nomearão as classes\n",
+    "                                         right=True, # Define se o limite superior está incluído\n",
+    "                                         include_lowest=True # Inclui o menor valor possível.\n",
+    "                                         )\n",
     "\n",
     "colaboradores"
    ]
@@ -406,8 +411,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "dc1c7815",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "faixa_salarial\n",
+       "E     948\n",
+       "D    8070\n",
+       "C    1944\n",
+       "B      93\n",
+       "A      35\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tabela de frequência das faixas salariais\n",
+    "frequencias = colaboradores['faixa_salarial'].value_counts().sort_index()\n",
+    "\n",
+    "frequencias # frequência absoluta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5713bd8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "faixa_salarial\n",
+       "E     8.55\n",
+       "D    72.77\n",
+       "C    17.53\n",
+       "B     0.84\n",
+       "A     0.32\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frequencias_r = colaboradores['faixa_salarial'].value_counts(normalize=True).mul(100).round(2).sort_index()\n",
+    "frequencias_r # Frequências relativas %"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "437ccac5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>faixa_salarial</th>\n",
+       "      <th>frequencia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E</td>\n",
+       "      <td>948</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D</td>\n",
+       "      <td>8070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>1944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  faixa_salarial  frequencia\n",
+       "0              E         948\n",
+       "1              D        8070\n",
+       "2              C        1944\n",
+       "3              B          93\n",
+       "4              A          35"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Agrupar por faixa salarial e calcular a frequência e porcentagem\n",
+    "classes_salariais = colaboradores.groupby('faixa_salarial', observed=False ).size().reset_index(name='frequencia')\n",
+    "\n",
+    "classes_salariais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3e56fd21",
    "metadata": {},
    "outputs": [
     {
@@ -480,23 +625,100 @@
        "4              A          35     0.315600"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Tabela de frequência das faixas salariais\n",
-    "frequencias = colaboradores['faixa_salarial'].value_counts().sort_index()\n",
-    "\n",
-    "frequencias\n",
-    "\n",
-    "# Agrupar por faixa salarial e calcular a frequência e porcentagem\n",
-    "classes_salariais = colaboradores.groupby('faixa_salarial', observed=False ).size().reset_index(name='frequencia')\n",
-    "\n",
     "# Calcular a porcentagem\n",
     "classes_salariais['porcentagem'] = (classes_salariais['frequencia'] / len(colaboradores)) * 100\n",
     "\n",
+    "classes_salariais"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0b499926",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>faixa_salarial</th>\n",
+       "      <th>frequencia</th>\n",
+       "      <th>porcentagem</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E</td>\n",
+       "      <td>948</td>\n",
+       "      <td>8.548242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>D</td>\n",
+       "      <td>8070</td>\n",
+       "      <td>72.768260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C</td>\n",
+       "      <td>1944</td>\n",
+       "      <td>17.529306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.838593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.315600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  faixa_salarial  frequencia  porcentagem\n",
+       "0              E         948     8.548242\n",
+       "1              D        8070    72.768260\n",
+       "2              C        1944    17.529306\n",
+       "3              B          93     0.838593\n",
+       "4              A          35     0.315600"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Ordenar pelas classes salariais\n",
     "classes_salariais = classes_salariais.sort_values(by='faixa_salarial')\n",
     "\n",
@@ -513,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ab742cff",
    "metadata": {},
    "outputs": [
@@ -533,7 +755,12 @@
     "plt.figure(figsize=(10, 8))\n",
     "\n",
     "# Criando o gráfico de barras\n",
-    "sns.barplot(x='faixa_salarial', y='frequencia', data=classes_salariais, color='steelblue', alpha=0.6)\n",
+    "sns.barplot(x='faixa_salarial', # Eixo X do gráfico\n",
+    "            y='frequencia', # Eixo Y do gráfico\n",
+    "            data=classes_salariais, # DataFrame\n",
+    "            color='steelblue', # cor tema\n",
+    "            alpha=0.6 # Clarea as barras\n",
+    "            )\n",
     "\n",
     "# Adicionando título e rótulos aos eixos\n",
     "plt.title('Distribuição de Frequência das Faixas Salariais', fontsize=22, ha='center')\n",
