add: saber_mais_tipos de variaveis

--- a/test.ipynb
+++ b/test.ipynb
@@ -497,6 +497,145 @@
     "\n",
     "df_merged"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5a26c741",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Jogador</th>\n",
+       "      <th>Posição</th>\n",
+       "      <th>Condição_Física</th>\n",
+       "      <th>Situação</th>\n",
+       "      <th>Média de km</th>\n",
+       "      <th>Jogos</th>\n",
+       "      <th>Gols</th>\n",
+       "      <th>Assistências</th>\n",
+       "      <th>CA</th>\n",
+       "      <th>CV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rodrigo</td>\n",
+       "      <td>GOL</td>\n",
+       "      <td>Boa</td>\n",
+       "      <td>Titular</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>João</td>\n",
+       "      <td>ZAG</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>Reserva</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rômulo</td>\n",
+       "      <td>MEI</td>\n",
+       "      <td>Ruim</td>\n",
+       "      <td>Lesionado</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>PD</td>\n",
+       "      <td>Boa</td>\n",
+       "      <td>Titular</td>\n",
+       "      <td>9.3</td>\n",
+       "      <td>25</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Marcelo</td>\n",
+       "      <td>ATA</td>\n",
+       "      <td>Boa</td>\n",
+       "      <td>Titular</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Jogador Posição Condição_Física   Situação  Média de km  Jogos  Gols  \\\n",
+       "0  Rodrigo     GOL             Boa    Titular          0.0     30     0   \n",
+       "1     João     ZAG         Regular    Reserva          7.5     18     1   \n",
+       "2   Rômulo     MEI            Ruim  Lesionado          6.5     10     2   \n",
+       "3    Pedro      PD             Boa    Titular          9.3     25     8   \n",
+       "4  Marcelo     ATA             Boa    Titular          8.1     28    12   \n",
+       "\n",
+       "   Assistências  CA  CV  \n",
+       "0             0   1   0  \n",
+       "1             0   3   1  \n",
+       "2             3   2   0  \n",
+       "3             5   4   0  \n",
+       "4             4   2   0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jogadores = 'estatistica_ML/desempenho_jogadores.csv'\n",
+    "import pandas as pd\n",
+    "\n",
+    "dados_jogadores = pd.read_csv(jogadores, sep=';')\n",
+    "dados_jogadores.drop(columns='Unnamed: 10', inplace=True)\n",
+    "dados_jogadores"
+   ]
   }
  ],
  "metadata": {
@@ -515,7 +654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
